feat: 🎸 update locales

--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,7 +1,44 @@
 {
-  "hello": "Hello",
-
-  "errorcode.-1": "NETWORK ERROR",
-  "errorcode.404": "CANNOT FIND RESOURCE",
-  "errorcode.fallback": "NETWORK ERROR"
+  "aror": "AROR",
+  "available": "Available",
+  "bal": "Bal.",
+  "buy": "Buy",
+  "buy.amount": "Buy Amount",
+  "capacity": "Capacity",
+  "confirm": "Confirm",
+  "contact.us": "Contact Us",
+  "daily_yield": "Daily Yield",
+  "days_suffix": "{n} days",
+  "description": "Description",
+  "details": "Details",
+  "disconnect": "Disconnect",
+  "disconnect.confirm": "Disconnect from wallet?",
+  "earning_detail": "Earning Detail",
+  "error.amount-invalid": "Amount is invalid",
+  "error.amount_exceed_position": "Amount cannot exceed position",
+  "error.avaliable": "Only {amount} is avaliable",
+  "error.max_amount_per_order": "Max amount preorder is {amount}",
+  "error.min_amount_per_order": "Min amount preorder is {amount}",
+  "hours_suffix": "{n} hours",
+  "interest_period": "Interest Period",
+  "learn.more": "Learn More",
+  "max_amount_per_order": "Max Amount Per Order",
+  "message.confirm_redeem": "Confirm Redeem?",
+  "message.interest_yield": "The interest yield is compounded and accrued every minute.",
+  "message.redeem_amount": "Your will redeem {amount}",
+  "message.redeem_success": "Redeem Successfully",
+  "messeage.buy_successfully": "Buy Successfully",
+  "messeage.processed": "Your request will be processed. Please return to see the balance",
+  "min_amount_per_order": "Min Amount Per Order",
+  "minutes": "minutes",
+  "minutes_suffix": "{n} minutes",
+  "paid": "Paid",
+  "payment": "Payment",
+  "redeem": "Redeem",
+  "redeem_amount": "Redeem Amount",
+  "redemption_time": "Redemption Time",
+  "redemption_warning": "It takes around {period} to process your redemption request. Please wait patiently.",
+  "seconds": "seconds",
+  "seconds_suffix": "{n} seconds",
+  "total_yield": "Total Yield"
 }
