--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -5,7 +5,9 @@
   "buy": "Buy",
   "buy.amount": "Buy Amount",
   "capacity": "Capacity",
+  "checking_result": "Checking Result...",
   "confirm": "Confirm",
+  "connect_wallet": "Connect Wallet",
   "contact.us": "Contact Us",
   "daily_yield": "Daily Yield",
   "days_suffix": "{n} days",
