--- a/src/lang/en-US.json
+++ b/src/lang/en-US.json
@@ -1,4 +1,6 @@
 {
+  "about": "About",
+  "accept": "Accept",
   "aror": "AROR",
   "authing": "Logging",
   "available": "Available",
@@ -43,6 +45,12 @@
   "redemption_warning": "It takes around {period} to process your redemption request. Please wait patiently.",
   "seconds": "seconds",
   "seconds_suffix": "{n} seconds",
+  "terms.hint": "Before using Pando Wave（'Wave'）, please make sure you understand the working principle of Wave and agree to the following terms:",
+  "terms.item1": "1. Cryptocurrencies are NOT bank deposits, are NOT legal tender, are NOT backed by the government, and accounts and value balances are NOT subject to government-backed protections. Please make investment decisions at your own discretion.",
+  "terms.item2": "2. The User acknowledges that as with any cryptocurrency investment, the value of the portfolio can go up and down depending on various risk factors. As such, Wave shall not be liable for any direct, indirect or consequential loss or damages suffered by the User, including but not limited to loss of profits, loss of business, loss of opportunity, loss of anticipated savings, loss of data, damage to reputation and any other forms of loss or damages where they are caused beyond the reasonable control and not caused by intentional acts or omissions of Wave.",
+  "terms.item3": "3. The yield you receive varies in different products. Please read the product descriptions carefully to understand products better before you make investment decisions.",
+  "terms.item4": "4. With the application of MTG technology, Wave is commited to protecting the security of your fund.",
+  "terms.item5": "5. Wave shall always endeavor to act in the best interests of the User. When emergent and necesary, the MTG nodes have the right to intervene in the system and will make public announcement after it is done.",
   "total_yield": "Total Yield",
-  "about": "About"
+  "use.terms": "Terms of Service"
 }
