--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -1,56 +1,56 @@
 {
-  "about": "About",
-  "accept": "Accept",
-  "aror": "AROR",
-  "authing": "Logging",
-  "available": "Available",
-  "bal": "Bal.",
-  "buy": "Buy",
-  "buy.amount": "Buy Amount",
-  "capacity": "Capacity",
-  "checking_result": "Checking Result...",
-  "confirm": "Confirm",
-  "connect_wallet": "Connect Wallet",
-  "contact.us": "Contact Us",
-  "daily_yield": "Daily Yield",
-  "days_suffix": "{n} days",
-  "description": "Description",
-  "details": "Details",
-  "disconnect": "Disconnect",
-  "disconnect.confirm": "Disconnect from wallet?",
-  "earning_detail": "Earning Detail",
-  "error.amount-invalid": "Amount is invalid",
-  "error.amount_exceed_position": "Amount cannot exceed position",
-  "error.avaliable": "Only {amount} is avaliable",
-  "error.max_amount_per_order": "Max amount preorder is {amount}",
-  "error.min_amount_per_order": "Min amount preorder is {amount}",
-  "hours_suffix": "{n} hours",
-  "interest_period": "Interest Period",
-  "learn.more": "Learn More",
-  "max_amount_per_order": "Max Amount Per Order",
-  "message.confirm_redeem": "Confirm Redeem?",
-  "message.interest_yield": "The interest yield is compounded and accrued every minute.",
-  "message.redeem_amount": "Your will redeem {amount}",
-  "message.redeem_success": "Redeem Successfully",
-  "messeage.buy_successfully": "Buy Successfully",
-  "messeage.processed": "Your request will be processed. Please return to see the balance",
-  "min_amount_per_order": "Min Amount Per Order",
-  "minutes": "minutes",
-  "minutes_suffix": "{n} minutes",
-  "paid": "Paid",
-  "payment": "Payment",
-  "redeem": "Redeem",
-  "redeem_amount": "Redeem Amount",
-  "redemption_time": "Redemption Time",
-  "redemption_warning": "It takes around {period} to process your redemption request. Please wait patiently.",
-  "seconds": "seconds",
-  "seconds_suffix": "{n} seconds",
-  "terms.hint": "Before using Pando Wave（'Wave'）, please make sure you understand the working principle of Wave and agree to the following terms:",
-  "terms.item1": "1. Cryptocurrencies are NOT bank deposits, are NOT legal tender, are NOT backed by the government, and accounts and value balances are NOT subject to government-backed protections. Please make investment decisions at your own discretion.",
-  "terms.item2": "2. The User acknowledges that as with any cryptocurrency investment, the value of the portfolio can go up and down depending on various risk factors. As such, Wave shall not be liable for any direct, indirect or consequential loss or damages suffered by the User, including but not limited to loss of profits, loss of business, loss of opportunity, loss of anticipated savings, loss of data, damage to reputation and any other forms of loss or damages where they are caused beyond the reasonable control and not caused by intentional acts or omissions of Wave.",
-  "terms.item3": "3. The yield you receive varies in different products. Please read the product descriptions carefully to understand products better before you make investment decisions.",
-  "terms.item4": "4. Wave is committed to protecting the security of your fund.",
-  "terms.item5": "5. Wave shall always endeavor to act in the best interests of the User. When emergent and necessary, Wave has the right to intervene in the system and will make public announcement after it is done.",
-  "total_yield": "Total Yield",
-  "use.terms": "Terms of Service"
+  "about": "關於",
+  "accept": "接受",
+  "aror": "年化利率",
+  "authing": "登錄",
+  "available": "可購數量",
+  "bal": "餘額",
+  "buy": "購買",
+  "buy.amount": "設定購買數量",
+  "capacity": "能力/最大承載量",
+  "checking_result": "檢查結果...",
+  "confirm": "確認",
+  "connect_wallet": "連接錢包",
+  "contact.us": "聯系我們",
+  "daily_yield": "日收益",
+  "days_suffix": "{n} 天",
+  "description": "描述",
+  "details": "詳細資料",
+  "disconnect": "斷開連接",
+  "disconnect.confirm": "是否斷開連接？",
+  "earning_detail": "收入詳細信息",
+  "error.amount-invalid": "金額無效",
+  "error.amount_exceed_position": "金額不能超過持倉量",
+  "error.avaliable": "僅 {amount} 金額可用",
+  "error.max_amount_per_order": "每單金額最大為 {amount}",
+  "error.min_amount_per_order": "每單金額最小為 {amount}",
+  "hours_suffix": "{n} 小時",
+  "interest_period": "生息週期",
+  "learn.more": "了解更多",
+  "max_amount_per_order": "單筆訂單最大金額",
+  "message.confirm_redeem": "確認贖回？",
+  "message.interest_yield": "利息收益是複利的，每分鐘都在累積。",
+  "message.redeem_amount": "你將贖回 {amount}",
+  "message.redeem_success": "贖回成功",
+  "messeage.buy_successfully": "買入成功",
+  "messeage.processed": "您的請求正在處理，請返回查看餘額。",
+  "min_amount_per_order": "單筆訂單最低限額",
+  "minutes": "分鐘",
+  "minutes_suffix": "{n} 分钟",
+  "paid": "支付",
+  "payment": "付款方式",
+  "redeem": "贖回",
+  "redeem_amount": "贖回數量",
+  "redemption_time": "贖回時間",
+  "redemption_warning": "處理您的贖回申請大約需要 {period} 請耐心等待",
+  "seconds": "秒",
+  "seconds_suffix": "{n} 秒",
+  "terms.hint": "在使用Pando Wave（'Wave'）之前，請確認您了解Wave的工作原理並同意以下條款。",
+  "terms.item1": "1. 加密貨幣不是銀行存款，不是法定貨幣，不受政府支持，賬戶和價值餘額不受政府支持的保護。請自行作出投資決定。",
+  "terms.item2": "2. 用戶須知，與任何加密貨幣投資一樣，投資組合的價值可以根據各種風險因素而上升和下降。因此，對於用戶遭受的任何直接、間接或相應的損失或損害，包括但不限於利潤損失、業務損失、機會損失、預期儲蓄損失、數據損失、聲譽損害以及任何其他形式的損失或損害，如果這些損失或損害是在合理控制範圍之外造成的，並且不是由 Wave 的故意行為或不行為造成的，Wave不承擔任何責任。",
+  "terms.item3": "3. 在不同的產品中，你得到的收益率是不同的。請仔細閱讀產品說明，以便在做出投資決定前更好地了解產品。",
+  "terms.item4": "4. Wave 致力於保護您的資金安全。",
+  "terms.item5": "5. Wave 始終努力為用戶的最大利益服務。在緊急情況和必要時，Wave 有權對系統進行干預，並在干預後進行公示。",
+  "total_yield": "總收益",
+  "use.terms": "服務條款"
 }
