--- a/src/lang/ja-JP.json
+++ b/src/lang/ja-JP.json
@@ -1,56 +1,56 @@
 {
-  "about": "About",
-  "accept": "Accept",
+  "about": "概要",
+  "accept": "同意する",
   "aror": "AROR",
-  "authing": "Logging",
-  "available": "Available",
+  "authing": "ロギング",
+  "available": "利用可能",
   "bal": "Bal.",
-  "buy": "Buy",
-  "buy.amount": "Buy Amount",
-  "capacity": "Capacity",
-  "checking_result": "Checking Result...",
-  "confirm": "Confirm",
-  "connect_wallet": "Connect Wallet",
-  "contact.us": "Contact Us",
-  "daily_yield": "Daily Yield",
-  "days_suffix": "{n} days",
-  "description": "Description",
-  "details": "Details",
-  "disconnect": "Disconnect",
-  "disconnect.confirm": "Disconnect from wallet?",
-  "earning_detail": "Earning Detail",
-  "error.amount-invalid": "Amount is invalid",
-  "error.amount_exceed_position": "Amount cannot exceed position",
-  "error.avaliable": "Only {amount} is avaliable",
-  "error.max_amount_per_order": "Max amount preorder is {amount}",
-  "error.min_amount_per_order": "Min amount preorder is {amount}",
-  "hours_suffix": "{n} hours",
-  "interest_period": "Interest Period",
-  "learn.more": "Learn More",
-  "max_amount_per_order": "Max Amount Per Order",
-  "message.confirm_redeem": "Confirm Redeem?",
-  "message.interest_yield": "The interest yield is compounded and accrued every minute.",
-  "message.redeem_amount": "Your will redeem {amount}",
-  "message.redeem_success": "Redeem Successfully",
-  "messeage.buy_successfully": "Buy Successfully",
-  "messeage.processed": "Your request will be processed. Please return to see the balance",
-  "min_amount_per_order": "Min Amount Per Order",
-  "minutes": "minutes",
-  "minutes_suffix": "{n} minutes",
-  "paid": "Paid",
-  "payment": "Payment",
-  "redeem": "Redeem",
-  "redeem_amount": "Redeem Amount",
-  "redemption_time": "Redemption Time",
-  "redemption_warning": "It takes around {period} to process your redemption request. Please wait patiently.",
-  "seconds": "seconds",
-  "seconds_suffix": "{n} seconds",
-  "terms.hint": "Before using Pando Wave（'Wave'）, please make sure you understand the working principle of Wave and agree to the following terms:",
-  "terms.item1": "1. Cryptocurrencies are NOT bank deposits, are NOT legal tender, are NOT backed by the government, and accounts and value balances are NOT subject to government-backed protections. Please make investment decisions at your own discretion.",
-  "terms.item2": "2. The User acknowledges that as with any cryptocurrency investment, the value of the portfolio can go up and down depending on various risk factors. As such, Wave shall not be liable for any direct, indirect or consequential loss or damages suffered by the User, including but not limited to loss of profits, loss of business, loss of opportunity, loss of anticipated savings, loss of data, damage to reputation and any other forms of loss or damages where they are caused beyond the reasonable control and not caused by intentional acts or omissions of Wave.",
-  "terms.item3": "3. The yield you receive varies in different products. Please read the product descriptions carefully to understand products better before you make investment decisions.",
-  "terms.item4": "4. Wave is committed to protecting the security of your fund.",
-  "terms.item5": "5. Wave shall always endeavor to act in the best interests of the User. When emergent and necessary, Wave has the right to intervene in the system and will make public announcement after it is done.",
-  "total_yield": "Total Yield",
-  "use.terms": "Terms of Service"
+  "buy": "購入",
+  "buy.amount": "購入金額",
+  "capacity": "容量",
+  "checking_result": "結果を確認しています...",
+  "confirm": "確認",
+  "connect_wallet": "ウォレットを接続する",
+  "contact.us": "お問い合わせ",
+  "daily_yield": "日次収益",
+  "days_suffix": "{n} 日",
+  "description": "説明",
+  "details": "詳細情報",
+  "disconnect": "接続解除",
+  "disconnect.confirm": "ウォレットから切断しますか？",
+  "earning_detail": "収益の詳細",
+  "error.amount-invalid": "金額が無効です",
+  "error.amount_exceed_position": "金額はポジションを超えることはできません",
+  "error.avaliable": "{amount} のみが利用可能です",
+  "error.max_amount_per_order": "事前注文の最大金額は{amount} です",
+  "error.min_amount_per_order": "最小金額の事前注文は{amount} です",
+  "hours_suffix": "{n} 時間",
+  "interest_period": "利息計算期間",
+  "learn.more": "詳細",
+  "max_amount_per_order": "注文あたりの最大金額",
+  "message.confirm_redeem": "引き換えを確認しますか？",
+  "message.interest_yield": "利回りは1分ごとに発生します。",
+  "message.redeem_amount": "{amount} を引き換えます。",
+  "message.redeem_success": "交換が完了しました",
+  "messeage.buy_successfully": "購入成功",
+  "messeage.processed": "リクエストは処理されます。残高を確認するために戻ってください。",
+  "min_amount_per_order": "注文あたりの最小金額",
+  "minutes": "分",
+  "minutes_suffix": "{n} 分",
+  "paid": "お支払い完了",
+  "payment": "支払い",
+  "redeem": "交換",
+  "redeem_amount": "交換額",
+  "redemption_time": "返金時間",
+  "redemption_warning": "引き換えリクエストには約 {period} かかります。しばらくお待ちください。",
+  "seconds": "秒",
+  "seconds_suffix": "{n} 秒",
+  "terms.hint": "Pando Wave（「Wave」）を使用する前に、Waveの動作原理を理解し、次の条件に同意することを確認してください。",
+  "terms.item1": "1. 暗号通貨は銀行預金ではなく、法定通貨ではなく、政府の支援を受けておらず、口座と残高は政府の支援を受けていません。 投資判断はご自身の判断で行ってください。",
+  "terms.item2": "2. ユーザーは、他の暗号通貨への投資と同様に、ポートフォリオの価値はさまざまなリスク要因に応じて上下する可能性があることを認めます。 そのため、Waveは、利益の損失、ビジネスの損失、機会の損失、予想される節約の損失、データの損失、損害を含むがこれらに限定されない、ユーザーが被った直接的、間接的、または結果的な損失または損害について責任を負わないものとします。 評判およびその他の形態の損失または損害に対して、合理的な制御が及ばず、Waveの意図的な作為または不作為によって引き起こされたものではない場合。",
+  "terms.item3": "3. 受け取る利回りは、製品によって異なります。 投資を決定する前に、商品の説明をよく読んで商品をよく理解してください。",
+  "terms.item4": "4. Waveは、ファンドのセキュリティを保護することをお約束します。",
+  "terms.item5": "5. Waveは、常にユーザーの最善の利益のために行動するよう努めるものとします。 緊急かつ必要な場合、Waveはシステムに介入する権利を有し、システムが完了した後に公表します。",
+  "total_yield": "総収益",
+  "use.terms": "利用規約"
 }
